--- a/mlir/test/CMakeLists.txt
+++ b/mlir/test/CMakeLists.txt
@@ -18,6 +18,6 @@ set(QUANTUM_OPT_TEST_DEPENDS FileCheck count not quantum-opt)
 
 add_lit_testsuite(check-quantum-opt "Running the quantum-opt regression tests"
                   ${CMAKE_CURRENT_BINARY_DIR} DEPENDS ${QUANTUM_OPT_TEST_DEPENDS})
-set_target_properties(check-quantum-opt PROPERTIES FOLDER "Tests")
+set_target_properties(check-quantum-opt PROPERTIES FOLDER "Tests" EXCLUDE_FROM_ALL ON)
 
 add_lit_testsuites(QUANTUM_OPT ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS ${QUANTUM_OPT_TEST_DEPENDS})
