--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,7 @@ sdist-only = ["src/mqt/core/_version.py"]
 git-only = [
     "docs/*",
     "test/*",
+    "mlir/*",
 ]
 
 [tool.scikit-build.cmake.define]
