🔧 MLIR shall not be part of the Python package sdist
Signed-off-by: burgholzer <burgholzer@me.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,7 @@ sdist-only = ["src/mqt/core/_version.py"]
 git-only = [
     "docs/*",
     "test/*",
+    "mlir/*",
 ]
 
 [tool.scikit-build.cmake.define]
