📝 add a dedicated release drafter section for MLIR
Signed-off-by: burgholzer <burgholzer@me.com>

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -10,6 +10,9 @@ categories:
   - title: "🕸️ MQT Core ZX Package"
     labels:
       - "ZX"
+  - title: "🐉 MQT Core MLIR"
+    labels:
+      - "MLIR"
   - title: "🚀 Features and Enhancements"
     labels:
       - "feature"
