💚 make sure `uv` sets up a venv
Signed-off-by: burgholzer <burgholzer@me.com>

--- a/.github/workflows/ci_mlir.yml
+++ b/.github/workflows/ci_mlir.yml
@@ -64,6 +64,8 @@ jobs:
       # set up uv for faster Python package management
       - name: Install the latest version of uv
         uses: astral-sh/setup-uv@v5
+        with:
+          python-version: 3.13
 
       # make sure ninja is installed
       - name: Install Ninja
