💚 make sure lit can be found
Signed-off-by: burgholzer <burgholzer@me.com>

--- a/.github/workflows/ci_mlir.yml
+++ b/.github/workflows/ci_mlir.yml
@@ -81,7 +81,7 @@ jobs:
           cmake -G Ninja -S . -B build \
             -DCMAKE_BUILD_TYPE=Release \
             -DBUILD_MQT_CORE_MLIR=ON \
-            -DLLVM_EXTERNAL_LIT=.venv/bin/lit
+            -DLLVM_EXTERNAL_LIT=$(which lit)
 
       # build the project and run the tests
       - name: Build MLIR components and directly run lit tests
