--- a/mlir/lib/Conversion/CMakeLists.txt
+++ b/mlir/lib/Conversion/CMakeLists.txt
@@ -5,5 +5,5 @@
 #
 # Licensed under the MIT License
 
-add_subdirectory(Dialect)
-add_subdirectory(Conversion)
+add_subdirectory(MQTOptToQuantum)
+add_subdirectory(QuantumToMQTOpt)
