🚧 add plugin files

--- a/mlir/CMakeLists.txt
+++ b/mlir/CMakeLists.txt
@@ -5,6 +5,9 @@
 #
 # Licensed under the MIT License
 
+# HACK
+cmake_policy(SET CMP0057 NEW)
+
 # set the include directory for the build tree
 set(MQT_MLIR_INCLUDE_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
