🚧 fix cmake config

--- a/mlir/CMakeLists.txt
+++ b/mlir/CMakeLists.txt
@@ -10,12 +10,17 @@ set(MQT_MLIR_INCLUDE_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 # MLIR must be installed on the system
 find_package(MLIR REQUIRED CONFIG)
+find_package(Catalyst REQUIRED CONFIG)
+
 message(STATUS "Using MLIRConfig.cmake in: ${MLIR_DIR}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
 # Add the paths to the MLIR and LLVM CMake modules.
 list(APPEND CMAKE_MODULE_PATH "${MLIR_CMAKE_DIR}")
 list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
+list(APPEND CMAKE_MODULE_PATH "${CATALYST_CMAKE_DIR}")
+
+set(MLIR_INCLUDE_DIRS "${MLIR_INCLUDE_DIRS};${CATALYST_INCLUDE_DIRS}")
 
 # Include the TableGen, LLVM and MLIR CMake modules.
 include(TableGen)
