--- a/mlir/tools/quantum-opt/CMakeLists.txt
+++ b/mlir/tools/quantum-opt/CMakeLists.txt
@@ -17,7 +17,9 @@ set(LIBS
     MLIROptLib
     MLIRMQTOptTransforms
     MQTOptToQuantum
-    QuantumToMQTOpt)
+    QuantumToMQTOpt
+    MLIRQuantum
+)
 
 add_mlir_tool(quantum-opt quantum-opt.cpp DEPENDS ${LIBS} SUPPORT_PLUGINS)
 target_compile_options(quantum-opt PRIVATE -fexceptions)
