--- a/src/dd/CMakeLists.txt
+++ b/src/dd/CMakeLists.txt
@@ -10,19 +10,22 @@ if(NOT TARGET ${MQT_CORE_TARGET_NAME}-dd)
   file(GLOB_RECURSE DD_HEADERS ${MQT_CORE_INCLUDE_BUILD_DIR}/dd/*.hpp)
   file(GLOB_RECURSE DD_SOURCES **.cpp)
 
-  # add DD Package library
-  add_library(${MQT_CORE_TARGET_NAME}-dd ${DD_HEADERS} ${DD_SOURCES})
+  # create the library target (initially empty)
+  add_library(${MQT_CORE_TARGET_NAME}-dd)
+
+  # add sources to target
+  target_sources(${MQT_CORE_TARGET_NAME}-dd PRIVATE ${DD_SOURCES})
+
+  # add headers using file sets
+  target_sources(
+    ${MQT_CORE_TARGET_NAME}-dd PUBLIC FILE_SET HEADERS BASE_DIRS ${MQT_CORE_INCLUDE_BUILD_DIR}
+                                      FILES ${DD_HEADERS})
 
   # add link libraries
   target_link_libraries(
     ${MQT_CORE_TARGET_NAME}-dd
     PUBLIC MQT::CoreIR nlohmann_json::nlohmann_json
     PRIVATE MQT::ProjectOptions MQT::ProjectWarnings)
-
-  # add include directories
-  target_include_directories(
-    ${MQT_CORE_TARGET_NAME}-dd PUBLIC $<BUILD_INTERFACE:${MQT_CORE_INCLUDE_BUILD_DIR}>
-                                      $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
 
   # add MQT alias
   add_library(MQT::CoreDD ALIAS ${MQT_CORE_TARGET_NAME}-dd)
@@ -37,14 +40,11 @@ if(NOT TARGET ${MQT_CORE_TARGET_NAME}-dd)
   # generate export header
   include(GenerateExportHeader)
   generate_export_header(${MQT_CORE_TARGET_NAME}-dd BASE_NAME mqt_core_dd)
+  target_sources(
+    ${MQT_CORE_TARGET_NAME}-dd PUBLIC FILE_SET HEADERS BASE_DIRS ${CMAKE_CURRENT_BINARY_DIR}/..
+                                      FILES ${CMAKE_CURRENT_BINARY_DIR}/mqt_core_dd_export.h)
   if(NOT BUILD_SHARED_LIBS)
     target_compile_definitions(${MQT_CORE_TARGET_NAME}-dd PUBLIC MQT_CORE_DD_STATIC_DEFINE)
-  endif()
-
-  # install export header
-  if(MQT_CORE_INSTALL)
-    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/mqt_core_dd_export.h
-            DESTINATION ${MQT_CORE_INCLUDE_INSTALL_DIR})
   endif()
 
   # add to list of MQT core targets
