--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,7 +62,7 @@ repos:
     rev: v0.11.0
     hooks:
       - id: ruff
-        args: ["--fix", "--show-fixes"]
+        args: ["--fix", "--show-fixes", "--exclude", "mqt_plugin_wheel"]
       - id: ruff-format
 
   # Static type checking using mypy
