🚧 use only header files instead of full lib

--- a/mlir/lib/Conversion/CMakeLists.txt
+++ b/mlir/lib/Conversion/CMakeLists.txt
@@ -7,27 +7,19 @@
 
 # Navigate up five levels using relative path notation
 get_filename_component(CATALYST_BASE_DIR "${MLIR_DIR}/../../../../.." ABSOLUTE)
-# Define the MLIR build directory
-set(MLIR_BUILD_DIR "${CATALYST_BASE_DIR}/build")
+# Define the MLIR include directory directly
+set(MLIRQUANTUM_INCLUDE_DIR "${CATALYST_BASE_DIR}/mlir/include")
 
 # Global settings for compiler flags
 add_compile_options(-fexceptions)
 
-# Find MLIRQuantum once and cache it
-find_library(
-  MLIRQuantum_LIB
-  NAMES MLIRQuantum
-  PATHS ${MLIR_BUILD_DIR}/lib
-  NO_DEFAULT_PATH)
-set(MLIRQuantum_LIB
-    ${MLIRQuantum_LIB}
-    CACHE INTERNAL "Path to MLIRQuantum Library")
+# Add include directory for MLIRQuantum headers
+include_directories(${MLIRQUANTUM_INCLUDE_DIR})
 
-# Set global MLIR conversion libraries property
-get_property(conversion_libs GLOBAL PROPERTY MLIR_CONVERSION_LIBS)
-set(conversion_libs
-    ${conversion_libs}
-    CACHE INTERNAL "MLIR Conversion Libraries")
+# Optionally, if using TableGen-generated headers, include build/include
+# (skip if not depending on generated .inc files)
+include_directories("${CATALYST_BASE_DIR}/build/include")
 
+# Register conversion subdirectories
 add_subdirectory(MQTOptToQuantum)
 add_subdirectory(QuantumToMQTOpt)
