--- a/mlir/tools/quantum-opt/CMakeLists.txt
+++ b/mlir/tools/quantum-opt/CMakeLists.txt
@@ -15,7 +15,10 @@ set(LIBS
     ${transform_libs}
     ${passes_libs}
     MLIROptLib
-    MLIRMQTOptTransforms)
+    MLIRMQTOptTransforms
+    MQTOptToQuantum
+    QuantumToMQTOpt
+    MLIRQuantum)
 
 add_mlir_tool(quantum-opt quantum-opt.cpp DEPENDS ${LIBS} SUPPORT_PLUGINS)
 target_compile_options(quantum-opt PRIVATE -fexceptions)
