--- a/mlir/include/mlir/Conversion/CMakeLists.txt
+++ b/mlir/include/mlir/Conversion/CMakeLists.txt
@@ -5,5 +5,5 @@
 #
 # Licensed under the MIT License
 
-add_subdirectory(MQTOptToQuantum)
-add_subdirectory(QuantumToMQTOpt)
+add_subdirectory(MQTOptToCatalystQuantum)
+add_subdirectory(CatalystQuantumToMQTOpt)
