--- a/mlir/lib/Conversion/Catalyst/CatalystQuantumToMQTOpt/CMakeLists.txt
+++ b/mlir/lib/Conversion/Catalyst/CatalystQuantumToMQTOpt/CMakeLists.txt
@@ -9,5 +9,5 @@ file(GLOB CONVERSION_SOURCES *.cpp)
 
 set(LIBRARIES ${conversion_libs} MLIRIR MLIRPass MQT::CoreIR ${MLIRQuantum_LIB})
 
-add_mlir_library(QuantumToMQTOpt ${CONVERSION_SOURCES} LINK_LIBS ${LIBRARIES} DEPENDS
-                 QuantumToMQTOptIncGen)
+add_mlir_library(CatalystQuantumToMQTOpt ${CONVERSION_SOURCES} LINK_LIBS ${LIBRARIES} DEPENDS
+CatalystQuantumToMQTOptIncGen)
