build(mlir): :building_construction: set up minimum version of MLIR for cmake
The `mlir` CMakeLists.txt now sets `MQT_MLIR_MIN_VERSION` as 20.0.
Building the project with an older MLIR version will fail.

--- a/mlir/CMakeLists.txt
+++ b/mlir/CMakeLists.txt
@@ -7,9 +7,13 @@
 
 # set the include directory for the build tree
 set(MQT_MLIR_INCLUDE_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
+set(MQT_MLIR_MIN_VERSION 20.0)
 
 # MLIR must be installed on the system
 find_package(MLIR REQUIRED CONFIG)
+if(MLIR_VERSION VERSION_LESS MQT_MLIR_MIN_VERSION)
+  message(FATAL_ERROR "MLIR version must be at least ${MQT_MLIR_MIN_VERSION}")
+endif()
 message(STATUS "Using MLIRConfig.cmake in: ${MLIR_DIR}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
