--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,6 +129,7 @@ jobs:
       cmake-args: -DBUILD_MQT_CORE_BENCHMARKS=ON -DBUILD_MQT_CORE_MLIR=ON
       clang-version: 20
       build-project: true
+      cpp-linter-extra-args: "-std=c++20"
 
   python-tests:
     name: 🐍 Test
