--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,6 +130,7 @@ jobs:
       clang-version: 20
       build-project: true
       cpp-linter-extra-args: "-std=c++20"
+      files-changed-only: false
 
   python-tests:
     name: 🐍 Test
